Fix header background in collapsed tables (#859)
* Fix collapsible header background color

* Replace cast with explicit type argument in Task.FromResult

--- a/src/WebApp/wwwroot/css/site.css
+++ b/src/WebApp/wwwroot/css/site.css
@@ -498,7 +498,7 @@ svg:not(:root) {
     }
 
     .table-collapsible tbody th {
-        background: #f1f1f1;
+        background-color: rgb(var(--bs-secondary-bg-rgb));
     }
 
     .table-collapsible th,
@@ -528,7 +528,7 @@ svg:not(:root) {
         content: attr(data-label) ": ";
         font-weight: 700;
     }
-} 
+}
 
 /* Menu styles for mobile devices
 -------------------------------------------------- */
